@@ -5,6 +5,9 @@
 #----------------------------#
 START_TIME=$(date +%s)
 
+# Add masurca to $PATH
+export PATH="$(readlink -f $(which masurca) | xargs dirname):$PATH"
+
 #----------------------------#
 # Renaming reads
 #----------------------------#
